third_party/rust/pin-project/tests/ui/project/type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:35:9
   |
23 |     match &mut foo {
   |           -------- this expression has type `&mut type_mismatch::__EnumProjection<'_, {integer}, {integer}, _, _>`
...
35 |         None => {} //~ ERROR mismatched types
   |         ^^^^ expected enum `type_mismatch::__EnumProjection`, found enum `std::option::Option`
   |
   = note: expected enum `type_mismatch::__EnumProjection<'_, {integer}, {integer}, _, _>`
              found enum `std::option::Option<_>`

error[E0308]: mismatched types
  |
  = note: expected enum `type_mismatch_span_issue::__EnumProjection<'_, {integer}, {integer}, _, _>`
             found enum `std::option::Option<_>`
